# Master-TUM

BMT/: ad
BMT/Markov Gambler/: __init__.py
BMT/QR decompositon/: gram_schmidt.py
BMT/art/: main.py
BMT/boiler_plate/: qrleastsquares.py
BMT/denoising/: denoising.py
BMT/denoising/data/: D.npy  I_noisy.npy  I_orig.npy  R.npy
BMT/eigenface/: eigenface.py
BMT/imageCompression/: imageCompression.py
BMT/imagefiltering/: convolutionAndEdgeDetection_partA_ex.py  convolutionAndEdgeDetection_partB_ex.py
BMT/segmentation/: art.py  segmentation.py
BMT/tracking1/: tracking1_v2.py  tracking7.py
DL4CV/dl4cv_latex_postertemplate/dl4cv_latex_postertemplate/: poster.fls  (+5 more)
DL4CV/exercise_1/: 1_softmax.ipynb  2_two_layer_net.ipynb  3_features.ipynb
DL4CV/exercise_3/: 0_2_pytorch_introduction.ipynb
Masterpraktikum CFD/: init.c  init.h  inple.h  uvp.c
Masterpraktikum CFD/CFD_ex2/: karman_big.pgm  main.c  sim
Masterpraktikum CFD/Problem 10.1/: CMakeLists.txt  boundary_val.c  inple.c  main.c
Masterpraktikum CFD/Problem 10.2/: boundary_val.c  helper.c  helper.h  uvp.c
TDCV/exercise_1/: task1.m  task1_peak2.fig  task2.fig  task2.m  task3.fig  task3.m  task3_new.fig  task4.m  task4_1.fig
TDCV/exercise_2/: Exercise_2 .pptx  new_folder.py  rename.py
TDCV/exercise_2/TDCV_ex2_task1&2/: CMakeLists.txt  hog_visualization.hpp  main.cpp  randomForest.hpp  read_images_in_folder.hpp  task_2.cpp
TDCV/exercise_2/TDCV_ex2_task3/: CMakeLists.txt  main.cpp  rf.cpp  rf.h
guided research/nlp-Yingqiang/: data_convert.py  model_BiLSTM.py  model_multiclass.py  utils.py
(+205 files in other folders)
